# simrail-companion

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  PROJECT_SUMMARY.md  README.md  debug_journey.py  example.py  example_simrail_api.py  example_tracker.py  main.py  pyproject.toml  ruff.toml  show_delays.py  show_summary.py  simrail-openapi-spec.json  sync_steam.py  test-output.xml  track.py  tui_tracker.py
.claude/: settings.json
data/: .gitignore  README.md
docs/: QUICK_START.md  TUI_CHANGELOG.md  TUI_FEATURES.md  TUI_GUIDE.md  TUI_LAYOUT.txt  TUI_LAYOUT_V2.txt  TUI_UPDATE_STEAM_STATS.md
examples/: vehicles_example.py
player_tracker/: database.py  summary.py  tracker.py
scripts/: inspect_train_composition.py  list_servers.py  show_delays.py  show_summary.py  sync_steam.py
simrail_api/: __init__.py  client.py  types.py
simrail_steam/: __init__.py  client.py  types.py
simrail_tools_api/: __init__.py  client.py  types.py  vehicle_types.py
src/player_tracker/: __init__.py  database.py  lock.py  summary.py  tracker.py  tui.py  types.py
src/simrail_api/: __init__.py  client.py  types.py
src/simrail_steam/: __init__.py  client.py  types.py
src/simrail_tools_api/: __init__.py  client.py  types.py  vehicle_types.py
tests/: README.md  test-output.xml  test_delay_calculation.py  test_double_headed.py  test_extended_types.py  test_transport.py  test_types.py  test_vehicles.py
tools/: debug_delay_filtering.py  test_stop_types.py
